# pry

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md
scripts/: reset-pry.bat
sidecar/: .gitignore  README.md  presets.json  pyproject.toml
sidecar/pry_sidecar/: inference.py  main.py  presets.py  registry.py  schemas.py
sidecar/scripts/: smoketest_bet1_tl_gpt2.py  smoketest_bet2_saelens_gpt2.py
sidecar/tests/: test_schemas.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: requirements-runtime.txt
src-tauri/src/: cli.rs  crash.rs  custom_models.rs  error.rs  hardware.rs  hf_auth.rs  lib.rs  main.rs  presets_compat.rs  sidecar.rs
src-tauri/src/bootstrap/: errors.rs  events.rs  mod.rs  pbs.rs  pip.rs  probe.rs  venv.rs
tools/: SURVEY.md
ui/: .gitignore  .prettierrc  README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.ts
ui/src/: app.css  app.html
ui/src/lib/: bootstrap-events.ts  is-tauri.ts  sidecar.ts  tauri.ts  types.ts  viridis.ts
ui/src/lib/components/: CircuitPanel.svelte  CustomModelDialog.svelte  DLAPanel.svelte  DrivenTutorial.svelte  FeatureCard.svelte  FirstTimeTip.svelte  HardwareCard.svelte  HardwareTradingCard.svelte  LoadProgressBanner.svelte  LogitLensPanel.svelte  ModelSwitcher.svelte  PanelA.svelte  PanelB.svelte  PatchingPanel.svelte  PredictionsPanel.svelte  PresetList.svelte  PresetPickerCard.svelte  ResizableSplit.svelte  SettingsDrawer.svelte  SharedTokenStrip.svelte  SteeringPanel.svelte  TabbedPanel.svelte
ui/src/lib/components/icons/: PryLogo.svelte
ui/src/lib/tips/: coordinate.ts  tips-registry.ts
ui/src/lib/tutorial/: actions.ts  advanced-steps.ts  driven-steps.ts  tutorial-store.svelte.ts
ui/src/routes/: +layout.svelte  +page.svelte
ui/src/routes/welcome/: +layout.svelte  +page.svelte
ui/src/routes/welcome/done/: +page.svelte
ui/src/routes/welcome/downloading/: +page.svelte
ui/src/routes/welcome/hardware/: +page.svelte
ui/src/routes/welcome/hf-token/: +page.svelte
ui/src/routes/welcome/installing/: +page.svelte
ui/src/routes/welcome/preset/: +page.svelte
