[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pry-sidecar"
version = "0.1.0"
description = "Python sidecar for Pry — local-first interpretability app"
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch==2.5.*",
    "transformer-lens>=2.11,<3",
    "sae-lens>=5.0,<6",
    "starlette>=0.40,<1",
    "uvicorn[standard]>=0.32,<1",
    "pydantic>=2.9,<3",
    "safetensors>=0.4,<1",
    "huggingface_hub>=0.26,<1",
    "hf_transfer>=0.1,<1",
    "sse-starlette>=2.1,<3",
    "numpy>=1.26,<3",
    "requests>=2.32,<3",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "ipykernel",
    "jupyter",
]

[tool.hatch.build.targets.wheel]
packages = ["pry_sidecar"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
