[package]
name = "pry"
version = "0.1.1"
edition = "2021"
description = "Pry open the black box — local-first interpretability desktop app"
license = "MIT"

[[bin]]
name = "pry"
path = "src/main.rs"

[[bin]]
name = "pry-cli"
path = "src/cli.rs"

[features]
# Default: devtools shipped in all builds so the in-app "Open DevTools" button works.
# Build with `--no-default-features` to strip devtools from the binary entirely.
default = ["devtools"]
devtools = ["tauri/devtools"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# devtools pulled in by the pry `devtools` feature above (default-on).
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
portpicker = "0.1"
which = "7"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
clap = { version = "4.5", features = ["derive"] }
tokio-util = { version = "0.7", features = ["io"] }
eventsource-stream = "0.2"
sha2 = "0.10"
tar = "0.4"
flate2 = "1"
once_cell = "1"
os_info = "3"
regex = "1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Security",
    "Win32_Security_Credentials",
] }

[target.'cfg(any(target_os = "windows", target_os = "linux"))'.dependencies]
nvml-wrapper = "0.10"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
